sume seccion populares
se unio populares a main

--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,19 +1,25 @@
 /* hero */
 @media (max-width: 992px) {
     #hero {
+    max-width: 100%;
+    font-size: small;
+       
+}
+}
+@media (max-width: 576px){
+
+    #hero {
         width: 100%;
         text-align: center;
         justify-content: center;
         align-items: center;
-        gap: 30px;
+        font-size: medium;
+        display: flex;
+        flex-direction: row;
       }
-      .hero-info h1 {
-        width: 90%;
-        max-width: 500px;
-        min-width: unset;
-      }
-}
-@media (max-width: 576px){
+    .hero h1{
+        font-size: medium;
+    }
     .hero-info p {
         width: 70%;
         max-width: unset;
