--- a/assets/style.css
+++ b/assets/style.css
@@ -106,3 +106,105 @@ left: 1046px;
 top: 94px;
 background: url(pizza.png);
 }
+
+/* populares  */
+#populares {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.populares {
+    margin: auto;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.populares_title {
+    color: var(--blanco);
+    display: flex;
+    justify-content: flex-start;
+    font-size: 22px;
+    font-weight: 300;
+}
+
+.populares_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5px 20px;
+    height: 212px;
+    width: 283px;
+    border-radius: 16px;
+    background-color: #252525;
+    box-shadow: 0 48px 128px rgba(0, 0, 0, .4);
+}
+
+.populares_info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 5px;
+}
+
+.populares_info h3 {
+    color: var(--blanco);
+    font-size: 20px;
+}
+
+.populares_info p {
+    color: var(--blanco);
+    opacity: .4;
+    font-size: 14px;
+    font-weight: 100;
+}
+
+.populares_item img {
+    width: 100%;
+    height: 100px;
+    background-position: center;
+    border-radius: 16px;
+    background-image: contain;
+    margin-bottom: 10px;
+}
+
+.populares_item h3 {
+    align-self: flex-start;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.item__precios {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+}
+
+.item__precios span:first-child {
+    background: var(--gradiente);
+    -webkit-background-clip: text;
+        background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 800;
+    font-size: 19px;
+}
+
+.item__precios span:last-child {
+    background: var(--gradiente);
+    padding: 3px 15px;
+    border-radius:  15px;
+    font-weight: 500;
+    font-size: 14px;
+}
+
