--- a/assets/style.css
+++ b/assets/style.css
@@ -17,14 +17,17 @@
     text-decoration: none;
     list-style-type: none;
     font-family: 'Montserrat';
-    background-color: var(--background);
+   
 }
-
+body{
+    background: var(--background);
+}
 /* seccion hero */
 
 #hero{
     margin-top: 65px;
-    padding: 70px 0;
+    margin-bottom: 60px;
+    padding: 170px 0;
     max-width: 1200px;
     display: flex;
     justify-content: center;
@@ -207,4 +210,3 @@ background: url(pizza.png);
     font-weight: 500;
     font-size: 14px;
 }
-
