--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -2,27 +2,32 @@
 @media (max-width: 992px) {
     #hero {
     max-width: 100%;
-    font-size: small;
-       
+    font-size: small;       
 }
-}
-@media (max-width: 576px){
 
-    #hero {
-        width: 100%;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-        font-size: medium;
-        display: flex;
-        flex-direction: row;
-      }
-    .hero h1{
-        font-size: medium;
-    }
-    .hero-info p {
+.hero{
+    width: 100%;
+}
+.hero h1{
+    width: 100%;
+    font-size: 40px;
+}
+.hero-info{
+    width: 80%;
+}
+.hero-info h2{
+    font-size: 40px;
+}
+.hero-info p{
+    font-size: 10px;
+}
+
+img{
+    display: none;
+}
+}
+@media (max-width: 585px) {
+    .populares_item {
         width: 70%;
-        max-width: unset;
-      }
-    
+    }
 }
