--- a/assets/style.css
+++ b/assets/style.css
@@ -17,16 +17,45 @@
     text-decoration: none;
     list-style-type: none;
     font-family: 'Montserrat';
-   
 }
 body{
     background: var(--background);
 }
+/* nav */
+header {
+    margin-top: 20px;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+}
+
+header img {
+    height: 70%;
+}
+
+nav {
+    padding: 0 20px 0 0;
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-links {
+    color: #FFA100;
+}
+
+.nav-links:hover {
+    color: #be8015;
+    cursor: pointer;
+}
+
 main{
     display: flex;
     flex-direction: column;
-   
-   
     width: 100%;
 }
 /* seccion hero */
@@ -208,3 +237,32 @@ background: url(pizza.png);
     font-weight: 500;
     font-size: 14px;
 }
+
+/* footer */
+
+footer {
+    margin-top: 45px;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    color: var(--white);
+}
+footer span{
+    font-weight: 600;
+}
+.footer-links {
+    font-weight: 100;
+    font-size: 14px;
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    justify-content: center;
+} 
+
+.footer-links a{
+    color: var(--white);
+}
+ 
