--- a/assets/style.css
+++ b/assets/style.css
@@ -60,21 +60,24 @@ main {
 /* seccion hero */
 
 #hero {
-  right: 90px;
-  margin-top: 65px;
-  padding: 100px;
+  margin-top: 63px;
+  padding: 70px 0;
+  margin: 70px;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: baseline;
 }
 .hero {
   display: flex;
   flex-direction: column;
   width: 50%;
+  gap: 20px;
 }
 .hero h1 {
+  width: 80%;
+  min-width: 500px;
   font-style: normal;
   color: var(--white);
   font-weight: 700;
@@ -114,6 +117,10 @@ main {
   /* Drop Shadow */
   box-shadow: 11px 28px 50px rgba(20, 78, 90, 0.2);
   border-radius: 15px;
+  transition: all 0.3s;
+}
+.hero-info a:hover {
+  transform: scale(1.1);
 }
 /* pizzas */
 .hero-img {
@@ -141,7 +148,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
+  margin: 80px;
   padding: 40px 0;
   max-width: 1200px;
   width: 100%;
@@ -152,7 +160,7 @@ main {
   height: 20px;
   font-style: normal;
   font-weight: 800;
-  font-size: 15px;
+  font-size: 18px;
   line-height: 131.02%;
   margin-bottom: 35px;
   color: #ffffff;
@@ -175,8 +183,11 @@ main {
   color: #ffffff;
   border-radius: 15px;
   cursor: pointer;
+  transition: all 0.3s;
 }
-
+.category:hover {
+  transform: scale(1.1);
+}
 .category p {
   text-align: center;
   left: 166px;
@@ -227,7 +238,7 @@ main {
   display: flex;
   justify-content: flex-start;
   font-size: 22px;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .populares_item {
