--- a/assets/style.css
+++ b/assets/style.css
@@ -137,6 +137,73 @@ top: 100px;
 background: url(pizza.png);
 }
 
+/* categorias */
+#categorias {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    margin: 80px;
+    padding: 40px 0;
+    max-width: 1200px;
+    width: 100%;
+  }
+  
+  #categorias h3 {
+    margin-top: 10px;
+    height: 20px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    margin-bottom: 35px;
+    color: #ffffff;
+    font-family: "Montserrat";
+  }
+  .categories {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  .category {
+    border: none;
+    width: 115px;
+    height: 115px;
+    left: 154px;
+    top: 846px;
+    background: #252525;
+    box-shadow: 0px 0px 50px rgba(1, 2, 7, 0.5);
+    color: #ffffff;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  .category:hover {
+    transform: scale(1.1);
+  }
+  .category p {
+    text-align: center;
+    left: 166px;
+    top: 938px;
+  }
+  .category img {
+    width: 65px;
+    height: 65px;
+    left: 150px;
+    top: 840px;
+  }
+  .category a {
+    color: transparent;
+    padding: 1px 10px;
+    font-size: 2px;
+    text-align: center;
+    letter-spacing: 0.5px;
+    background: linear-gradient(98.81deg, #ffa100 -0.82%, #fb103d 101.53%);
+    box-shadow: 0px 0px 50px rgb(20 78 90 / 20%);
+    border-radius: 15px;
+    text-decoration: none;
+  }
+
 /* populares  */
 #populares {
     display: flex;
