--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,33 +1,97 @@
 /* hero */
 @media (max-width: 992px) {
-    #hero {
+  #hero {
     max-width: 100%;
-    font-size: small;       
-}
+    font-size: small;
+  }
 
-.hero{
+  .hero {
     width: 100%;
-}
-.hero h1{
+  }
+  .hero h1 {
     width: 100%;
     font-size: 40px;
-}
-.hero-info{
+  }
+  .hero-info {
     width: 80%;
-}
-.hero-info h2{
+  }
+  .hero-info h2 {
     font-size: 40px;
-}
-.hero-info p{
+  }
+  .hero-info p {
     font-size: 10px;
-}
+  }
 
-img{
+  img {
     display: none;
-}
+  }
+  .card-padre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+    font-weight: 800;
+    opacity: 0.8;
+    letter-spacing: 3px;
+  }
+  .card-padre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-recomendaciones {
+    height: 150px;
+    width: 600px;
+    gap: 10px;
+  }
+  .card-info {
+    gap: 22px;
+  }
+  .card-info h4 {
+    font-size: 27px;
+  }
+  .card-info p {
+    font-size: 20px;
+  }
+  .card-info span {
+    font-size: 27px;
+    letter-spacing: 6px;
+  }
+  img {
+    width: 90px;
+  }
+  .div-img {
+    padding: 0px 20px;
+  }
+  .agregar span {
+    width: 100px;
+    height: 40px;
+  }
 }
 @media (max-width: 585px) {
-    .populares_item {
-        width: 70%;
-    }
+  .populares_item {
+    width: 70%;
+  }
+  .card-recomendaciones {
+    height: 130px;
+    width: 500px;
+  }
+  .card-info {
+    gap: 10px;
+  }
+  .card-info h4 {
+    font-size: 22px;
+    letter-spacing: 4px;
+  }
+  .card-info p {
+    font-size: 17px;
+    letter-spacing: 4px;
+  }
+  .card-info span {
+    font-size: 23px;
+  }
 }
