--- a/assets/style.css
+++ b/assets/style.css
@@ -142,23 +142,27 @@ background: url(pizza.png);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px 0;
+    margin: 80px;
+    padding: 40px 0;
     max-width: 1200px;
-    width: 100%;
   }
   
   #categorias h3 {
-    color: var(--white);
-    margin: 0 0 10px 120px;
-    font-size: 22px;
-    font-weight: 600;
+    margin: 10px auto 35px 10px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    color: #ffffff;
+    font-family: "Montserrat";
   }
-  .categories {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-  }
+
+.categories {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  max-width: 1200px;
+  width: 100%;
+}
   .category {
     border: none;
     width: 115px;
@@ -205,7 +209,6 @@ background: url(pizza.png);
     justify-content: center;
     max-width: 1200px;
     margin: auto;
-    margin-top: 500px;
     margin-bottom: 100px;
 }
 
@@ -223,9 +226,12 @@ background: url(pizza.png);
 .populares_title {
     color: var(--white);
     display: flex;
+    margin: 0 0 0 -10px;
     justify-content: flex-start;
     font-size: 22px;
     font-weight: 300;
+    max-width: 1200px;
+    width: 100%;
 }
 
 .populares_item {
