--- a/assets/style.css
+++ b/assets/style.css
@@ -116,6 +116,10 @@ background: linear-gradient(98.81deg, #FFA100 -0.82%, #FB103D 101.53%);
 box-shadow: 11px 28px 50px rgba(20, 78, 90, 0.2);
 border-radius: 15px;
 }
+.hero-info a:hover {
+    transform: scale(1.1);
+    
+  }
 /* pizzas */
 .hero-img{
     display: flex;
