--- a/assets/style.css
+++ b/assets/style.css
@@ -141,14 +141,103 @@ top: 100px;
 background: url(pizza.png);
 }
 
+/* recomendados */
+#recomendaciones {
+   margin: auto;
+  }
+  /* CONTENEDOR PADRE */
+  .card-padre {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    padding: 60px;
+    gap: 64px;
+  }
+  /* SUBTITULO */
+  .recomendados {
+    font-family: "montserrat";
+    font-weight: 500;
+    font-size: 22px;
+    color: #ffff;
+    padding: 0px 20px;
+  }
+  /* CARDS */
+  .card-recomendaciones {
+    background-color: var(--black);
+    width: 347px;
+    height: 103px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 50px rgba(1, 2, 7, 0.5);
+  }
+  .div-img {
+    width: 20%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 0px 10px;
+  }
+  .card-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
+    gap: 10px;
+  }
+  .agregar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    cursor: pointer;
+    padding: 0px 10px;
+  }
+  h4 {
+    font-family: "montserrat";
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffff;
+  }
+  p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.5px;
+    color: #ffff;
+    opacity: 0.3;
+  }
+  .card-info span {
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 131.02%;
+    background: linear-gradient(98.81deg, #ffa100 -0.82%, #ff005c 101.53%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+  }
+  .agregar span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(98.81deg, #ffa100 -0.82%, #ff005c 101.53%);
+    border-radius: 17.5px;
+    width: 85px;
+    height: 28px;
+    color: #fff;
+}
 /* categorias */
 #categorias {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 80px;
+    margin: auto;
     padding: 40px 0;
     max-width: 1200px;
+    margin-bottom: 20px;
   }
   
   #categorias h3 {
@@ -163,7 +252,7 @@ background: url(pizza.png);
 .categories {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 80px;
   max-width: 1200px;
   width: 100%;
 }
