--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -36,6 +36,10 @@ header {
     margin-top: unset;
     height: 60px;
 }
+
+.hero-info p{
+    width: 100%;
+}
 .populares_item {
     width: 70%;
 }
