--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 40%;
 }
 h2 {
     display: flex;
@@ -92,7 +93,7 @@ header {
 /* recomendados */
 .card-recomendaciones {
     height: 130px;
-    width: 500px;
+    width: 250%;
 }
 .card-info {
     gap: 10px;
