--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,156 +1,182 @@
 /* hero */
 @media (max-width: 992px) {
-#hero {
-    max-width: 100%;
-    font-size: small;       
-}
-
-.hero{
-    width: 100%;
-}
-.hero h1{
-    width: 80%;
-    font-size: 40px;
-}
-.hero-info{
-    width: 60%;
-}
-.hero-info h2{
-    font-size: 40px;
-    width: 80%;
-}
-.hero-info p{
-    font-size: 10px;
-    width: 40%;
-}
-
-.hero-img img{
-    display: none;
-}
-
-/* recomendados */
-.card-padre {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-#recomendaciones h2 {
-letter-spacing: 3px;
-}
-  .card-padre {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .card-recomendaciones {
-    height: 150px;
-    width: 600px;
-    gap: 10px;
-  }
-  .card-info {
-    gap: 22px;
-  }
-  .card-info h4 {
-    font-size: 27px;
-  }
-  .card-info p {
-    font-size: 20px;
-  }
-  .card-info span {
-    font-size: 27px;
-    letter-spacing: 6px;
-  }
-  img {
-    width: 90px;
-  }
-  .div-img {
-    padding: 0px 20px;
-  }
-  .agregar span {
-    width: 100px;
-    height: 40px;
-  }
-
-/* categories*/
-.categories {
-    flex-wrap: wrap;
-    max-width: 300px;
-}
-.category {
-    width: 120px;
-}
-
-/* popu */
-.populares_title {
-    justify-content: center;
-}
-}
-
-
-@media (max-width: 585px) {
-header {
-    margin-top: unset;
-    height: 60px;
-}
-#hero{
-    padding: 0;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 40PX;
-}
-.hero h1{
-    font-size: 30px;
-    width: 100%;
-}
-.hero-info a{
-    width: 40%;
-}
-.hero-info{
-    width: 100%;
-    align-items: center;
-}
-.hero-info p{
-    width: 100%;
-}
-
-/* recomendados */
-.card-recomendaciones {
-    height: 130px;
-    width: 100%;
-}
-.card-padre{
-    width: 100%;
-}
-.recomendados{
-text-align:justify;
-width: 80%;
-}
-.card-info {
-    gap: 10px;
-}
-.card-info h4 {
-    font-size: 22px;
-    letter-spacing: 4px;
-}
-.card-info p {
-    font-size: 17px;
-    letter-spacing: 4px;
-}
-.card-info span {
-    font-size: 23px;
-}
-
-/* category */
-.categories {
-    max-width: 300px;
-    justify-content: center;
-    align-items: center;
-}
-  /* popu */
-.populares_item {
-    width: 70%;
-}
-.footer-links {
-    flex-direction: column;
-}
-}
+    header img {
+        height: 70%;
+    }
+    #hero {
+        max-width: 100%;
+        font-size: small;       
+    }
+    .hero{
+        width: 100%;
+    }
+    .hero h1{
+        width: 80%;
+        font-size: 40px;
+    }
+    .hero-info{
+        width: 60%;
+    }
+    .hero-info h2{
+        font-size: 40px;
+        width: 80%;
+    }
+    .hero-info p{
+        font-size: 10px;
+        width: 40%;
+    }
+    
+    .hero-img img{
+        display: none;
+    }
+    
+    /* recomendados */
+    #recomendados {
+        width: 90%;
+    }
+    .card-padre {
+        display: flex;
+        margin: auto;
+        width: 80%;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #recomendaciones h2 {
+        letter-spacing: 3px;
+    }
+    .card-padre {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-recomendaciones {
+        max-width: unset;
+        width: 100%;
+        height: 100px;
+        gap: 10px;
+    }
+    .card-info {
+        gap: 7px;
+    }
+    .card-info h4 {
+        font-size: 20px;
+    }
+    .card-info p {
+        font-size: 15px;
+    }
+    .card-info span {
+        font-size: 18px;
+        letter-spacing: 4px;
+    }
+    .card-recomendaciones img {
+        width: 90px;
+        height: 100%;
+    }
+    .agregar span {
+        width: 90px;
+        height: 40px;
+    }
+    
+    /* categories*/
+    .categories {
+        flex-wrap: wrap;
+        max-width: 300px;
+    }
+    .category {
+        width: 120px;
+    }
+    
+    /* popu */
+    .populares_title {
+        justify-content: center;
+    }
+    }
+    
+    
+    @media (max-width: 585px) {
+    header {
+        margin-top: unset;
+        height: 60px;
+        justify-content: right;
+    }
+    header img {
+        display: none;
+    }
+    .nav {
+        padding: 20px;
+    }
+    #hero{
+        padding: 0;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 40PX;
+    }
+    .hero h1{
+        font-size: 30px;
+        width: 100%;
+    }
+    .hero-info a{
+        width: 40%;
+    }
+    .hero-info{
+        width: 100%;
+        align-items: center;
+    }
+    .hero-info p{
+        width: 100%;
+    }
+    
+    /* recomendados */
+    .card-recomendaciones {
+        width: 80%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .card-recomendaciones img  {
+        width: 50%;
+    }
+    .card-padre{
+        width: 100%;
+    }
+    .recomendados{
+        text-align: center;
+    }
+    .card-info {
+        gap: 10px;
+        text-align: center;
+    }
+    .card-info h4 {
+        font-size: 18px;
+        text-align: center;
+    }
+    .card-info p {
+        font-size: 14px;
+        align-self: center;
+    }
+    .card-info span {
+        font-size: 20px;
+        align-self: center;
+    }
+    .agregar {
+        width: 100%;
+    }
+    .agregar span {
+        width: 80%;
+    }
+    
+    /* category */
+    .categories {
+        max-width: 300px;
+        justify-content: center;
+        align-items: center;
+    }
+      /* popu */
+    .populares_item {
+        width: 70%;
+    }
+    .footer-links {
+        flex-direction: column;
+    }
+    }
