--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,7 @@ main{
     right: 90px;
     margin-top: 65px;
     padding: 100px;
-    padding-left: 130px;
+    margin: auto;
     max-width: 1200px;
     display: flex;
     flex-direction: column;
