--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: center;
 }
 .hero {
     display: flex;
