--- a/assets/style.css
+++ b/assets/style.css
@@ -61,9 +61,8 @@ main{
 /* seccion hero */
 
 #hero{
-    right: 190px;
-    margin-top: 65px;
-    padding: 100px;
+    margin-bottom: 50px;
+    padding: 100px 0 0 150px;
     max-width: 1200px;
     display: flex;
     flex-direction: column;
